--- a/WebApplAzure/appsettings.json
+++ b/WebApplAzure/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Greeting":  "Hello from development!", 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplAzure-645ECA01-ECCB-40F9-AB2D-A67D7E70F462;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
