Added Application Insights.

--- a/WebApplAzure/WebApplAzure.csproj
+++ b/WebApplAzure/WebApplAzure.csproj
@@ -4,12 +4,20 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-WebApplAzure-645ECA01-ECCB-40F9-AB2D-A67D7E70F462</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <ApplicationInsightsResourceId>/subscriptions/c273bfe8-a478-4ba3-a8f4-e77a57cf711b/resourcegroups/azuredemo/providers/microsoft.insights/components/demoapp</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/c273bfe8-a478-4ba3-a8f4-e77a57cf711b/resourcegroups/azuredemo/providers/microsoft.insights/components/demoapp</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
