--- a/WebApplAzure/appsettings.json
+++ b/WebApplAzure/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Greeting":  "Hello from development!", 
+  "Greeting": "Hello from development!",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplAzure-645ECA01-ECCB-40F9-AB2D-A67D7E70F462;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
@@ -8,5 +8,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "236c661d-9318-48ab-8ec7-a22b6cd0267c"
+  }
 }
